fix: Problem card text wraps

--- a/styles/Leetcode.module.sass
+++ b/styles/Leetcode.module.sass
@@ -24,12 +24,12 @@
 .problems
     display: grid
     justify-items: center
-    grid-template-columns: 358px 358px 358px
+    grid-template-columns: 368px 368px 368px
     grid-gap: 1rem
 
 @media screen and (max-width: 1200px)
     .problems
-        grid-template-columns: 358px 358px
+        grid-template-columns: 368px 365px
 
 @media screen and (max-width: 820px)
     .problems
